Fleet UI: Fix wobble links in truncated text cell links

--- a/frontend/components/TableContainer/DataTable/_styles.scss
+++ b/frontend/components/TableContainer/DataTable/_styles.scss
@@ -330,8 +330,8 @@ $shadow-transition-width: 10px;
 
           &:hover {
             .data-table__tooltip-truncated-text-container {
-              // @include link;
               @include animated-bottom-border;
+              margin-bottom: 0; // Undo margin-bottom of animated bottom border
 
               &:hover {
                 margin-bottom: 0; // Undo margin-bottom of animated bottom border
